--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Francisco Mesquita
 #logo: /assets/img/headshot_circle.png
-#description: text below image
-show_downloads: true
+description: text below image
+show_downloads: false
 theme: jekyll-theme-Cayman
 
