--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Francisco Mesquita
+title: The title of your site
 #logo: /assets/img/headshot_circle.png
 description: text below image
 show_downloads: false
