--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: The title of your site
+title: Francisco Mesquita
 logo: /assets/ProfilePic.jpg
 description: I am Computer Engineer with a strong interest in the study, research and application of machine learning and deep learning algorithms
 show_downloads: false
